<resources>
    <string name="app_name">eaTogether</string>
    <string name="search">Поиск</string>
    <string name="email">Email</string>
    <string name="register">Регистация</string>
    <string name="login">Вход</string>
    <string name="password">Пароль</string>
    <string name="log_in">Войти</string>
    <string name="cancel">Отмена</string>
    <string name="next">Далее</string>
    <string name="back">Назад</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="birthday">День рождения</string>
    <string name="ethint_description">Обо мне</string>
    <string name="confirm_password">Подтверждение пароля</string>
    <string name="eatogether">eaTogether</string>
    <string name="profile">Профиль</string>
    <string name="hi">Привет!</string>
    <string name="hi_2">С кем сегодня поедим?</string>
    <string name="log_out">Выйти</string>
    <string name="change_photo">Изменить фотографию</string>
    <string name="my_continue">Продолжить</string>

    <!--  Fragments' titles  -->
    <string name="title_profile">Профиль</string>
    <string name="title_edit_profile">Редактирование профиль</string>
    <string name="title_map">Карта</string>
    <string name="title_nearby">Люди рядом</string>
    <string name="title_match">Совпадение</string>
    <string name="title_party_detail">Подробно о компании</string>
    <string name="title_place_detail">Подробно о заведении</string>
    <string name="title_create_party">Создать компанию</string>
    <string name="title_my_parties">Мои компании</string>
    <string name="title_place_list">Список заведений</string>

    <string name="content_description_menu_btn">Кнопка для вызова меню</string>
    <string name="week_stats">Статистика</string>
    <string name="content_description_profile_settings">Фотография настроек</string>
    <string name="profile_more">Больше</string>
    <string name="content_description_back_btn">Кнопка назад</string>
    <string name="content_description_save_btn">Кнопка сохранить</string>
    <string name="content_description_profile_image">Фотография профиля</string>

    <!--  Errors  -->
    <string name="error_email_is_empty">Введите электронную почту</string>
    <string name="error_password_is_empty">Введите пароль</string>
    <string name="error_sign_in_failed">Почта и/или пароль введены неверно</string>
    <string name="error_email_already_exists">"Пользователь с данной электронной почтой уже существует"</string>
    <string name="error_email_malformed">Введите корректную электронную почту</string>
    <string name="error_weak_password">Данный пароль слишком слабый</string>
    <string name="error_unknown_error">Ошибка</string>
    <string name="error_passwords_mismatch">Пароли не совпадают</string>
    <string name="error_fields_must_be_filled">Заполните все поля</string>
    <string name="error_date_misformat">Введите корректное число</string>
    <string name="error_network_error">Ошибка подключения к интернету</string>
    <string name="error_default">Произошла ошибка</string>
    <string name="error_too_young">Для регистрации в приложении вам должно быть больше 18 лет</string>
    <string name="error_first_name_is_empty">Введите имя</string>
    <string name="error_last_name_is_empty">Введите фамилию</string>

    <string name="requestpermission_rationale">Вы должны дать согласие на использование вашей локации</string>
    <string name="success_party_created">Компания успешно создана!</string>
    <string name="btntext_create_party">Создать</string>
    <string name="btntext_cancel">Отменить</string>
    <string name="ethint_choose_time">Выберете время</string>
    <string name="ethint_choose_date">Выберете дату</string>
    <string name="ethint_choose_description">Описание</string>
    <string name="ethint_choose_title">Название</string>
    <string name="btntext_change_photo">Изменить фото</string>
    <string name="text_name">Имя</string>
    <string name="ethint_name">Имя</string>
    <string name="ethint_surname">Фамилия</string>
    <string name="ethint_birthday">Дата рождения</string>
    <string name="ethint_email">Электронная почта</string>
    <string name="text_email">Электронная почта</string>
    <string name="confirm">Подтвердить</string>
    <string name="start">Начать</string>

    <string name="drawer_open">Открыть</string>
    <string name="drawer_close">Закрыть</string>
    <string name="failure_phone_number_misformat">Please provide corrent phone number</string>
    <string name="error_no_internet">Нет соединения с интенетом</string>
    <string name="error_user_already_exists">Пользователь с такой почтой уже существует</string>
</resources>