<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.main.map.CreatePartyFragment">

    <TextView
        android:id="@+id/tvCreatePartyPlaceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/tvCreatePartyPlaceAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCreatePartyPlaceName"
        tools:text="@tools:sample/lorem" />

    <EditText
        android:id="@+id/etCreatePartyPlaceTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ethint_choose_title"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCreatePartyPlaceAddress" />

    <EditText
        android:id="@+id/etCreatePartyPlaceDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ethint_choose_description"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etCreatePartyPlaceTitle" />

    <EditText
        android:id="@+id/etCreatePartyPickDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ethint_choose_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etCreatePartyPlaceDescription" />

    <EditText
        android:id="@+id/etCreatePartyPickTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ethint_choose_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etCreatePartyPickDate" />


    <Button
        android:id="@+id/btnCreatePartyConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btntext_create_party"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etCreatePartyPickTime" />

    <Button
        android:id="@+id/btnCreatePartyCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btntext_cancel"
        app:layout_constraintStart_toEndOf="@id/btnCreatePartyConfirm"
        app:layout_constraintTop_toBottomOf="@id/etCreatePartyPickTime" />

</androidx.constraintlayout.widget.ConstraintLayout>