<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_child_graph"
    app:startDestination="@id/searchResultFragment">

    <fragment
        android:id="@+id/createPartyFragment"
        android:name="ru.blackbull.eatogether.ui.main.map.CreatePartyFragment"
        android:label="@string/title_create_party"
        tools:layout="@layout/fragment_create_party">
        <argument
            android:name="placeUri"
            app:argType="string" />
        <argument
            android:name="placeName"
            app:argType="string" />
        <argument
            android:name="placeAddress"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/partyDetailFragment"
        android:name="ru.blackbull.eatogether.ui.main.map.PartyDetailFragment"
        android:label="@string/title_party_detail"
        tools:layout="@layout/fragment_party_detail">
        <argument
            android:name="partyId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/placeDetailFragment"
        android:name="ru.blackbull.eatogether.ui.main.map.PlaceDetailFragment"
        android:label="@string/title_place_detail"
        tools:layout="@layout/fragment_place_detail">
        <action
            android:id="@+id/action_placeDetailFragment_to_createPartyFragment"
            app:destination="@id/createPartyFragment" />
        <action
            android:id="@+id/action_placeDetailFragment_to_partyDetailFragment"
            app:destination="@id/partyDetailFragment" />
        <argument
            android:name="placeDetail"
            app:argType="ru.blackbull.eatogether.models.PlaceDetail" />
    </fragment>
    <fragment
        android:id="@+id/searchResultFragment"
        android:name="ru.blackbull.eatogether.ui.main.map.SearchResultFragment"
        android:label="@string/title_place_list"
        tools:layout="@layout/fragment_search_result">
        <action
            android:id="@+id/action_searchResult_to_placeDetailFragment"
            app:destination="@id/placeDetailFragment" />
    </fragment>

</navigation>