<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="@color/colorLiteGrey">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRegistrationAppName"
        android:layout_width="@dimen/eatogether_title_width"
        android:layout_height="@dimen/eatogether_title_height"
        android:layout_marginTop="@dimen/eatogether_title_mangin_top"
        android:background="@drawable/rounded_button_light_grey"
        android:fontFamily="@font/spirax"
        android:gravity="center"
        android:text="@string/eatogether"
        android:textColor="@color/colorPink"
        android:textSize="@dimen/eatogether_title_font"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llRegistrationFirstStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegistrationAppName">

        <EditText
            android:id="@+id/etRegistrationEmail"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_button_light_grey"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRegistrationAppName"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/etRegistrationPassword"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_button_light_grey"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etRegistrationPassword"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/etRegistrationPasswordConfirmation"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_button_light_grey"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etRegistrationEmail" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRegistrationSecondStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegistrationAppName">

        <EditText
            android:id="@+id/etRegistrationFirstName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_light_grey"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="15dp"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/etRegistrationLastName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_light_grey"
            android:hint="@string/surname"
            android:inputType="text"
            android:padding="15dp"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etRegistrationFirstName"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/etRegistrationBirthday"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_light_grey"
            android:hint="@string/birthday"
            android:inputType="date"
            android:padding="15dp"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etRegistrationLastName"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/etRegistrationDescription"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_light_grey"
            android:hint="@string/ethint_description"
            android:inputType="text"
            android:padding="15dp"
            android:paddingLeft="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etRegistrationBirthday"
            tools:ignore="MissingConstraints" />
    </LinearLayout>


    <Button
        android:id="@+id/btnRegistrationNextAndConfirm"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:background="@drawable/rounded_button_green"
        android:text="@string/next"
        android:textColor="@color/colorLiteGrey"
        app:layout_constraintBottom_toTopOf="@+id/btnRegistrationCancelAndBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRegistrationCancelAndBack"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/auth_buttons_margin_bot"
        android:background="@drawable/rounded_button_pink"
        android:text="@string/cancel"
        android:textColor="@color/colorLiteGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/registrationProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
