<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="@color/colorLiteGrey">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etLoginEmail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/rounded_button_light_grey"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginAppName" />

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_button_light_grey"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLoginEmail" />

    <Button
        android:id="@+id/btnLoginConfirm"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_button_green"
        android:text="@string/log_in"
        android:textColor="@color/colorLiteGrey"
        app:layout_constraintBottom_toTopOf="@+id/btnLoginCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLoginCancel"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginBottom="@dimen/auth_buttons_margin_bot"
        android:background="@drawable/rounded_button_pink"
        android:text="@string/cancel"
        android:textColor="@color/colorLiteGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvLoginAppName"
        android:layout_width="@dimen/eatogether_title_width"
        android:layout_height="@dimen/eatogether_title_height"
        android:layout_marginTop="@dimen/eatogether_title_mangin_top"
        android:background="@drawable/rounded_button_light_grey"
        android:fontFamily="@font/spirax"
        android:gravity="center"
        android:text="@string/eatogether"
        android:textColor="@color/colorPink"
        android:textSize="@dimen/eatogether_title_font"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/loginProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="181dp"
        tools:layout_editor_absoluteY="300dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
