<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="@color/colorLiteGrey">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/fon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="331dp"
        android:background="@drawable/rounded_button_light_grey"
        android:hint="@string/email"
        android:paddingLeft="20dp"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="331dp"
        android:background="@drawable/rounded_button_light_grey"
        android:hint="@string/password"
        android:paddingLeft="20dp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/login_confirm"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="135dp"
        android:background="@drawable/rounded_button_green"
        android:text="@string/log_in"
        android:textColor="#EEEEEE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/login_cancel"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="140dp"
        android:background=""
        android:text="@string/cancel"
        android:textColor="#EEEEEE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button3"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="225dp"
        android:background="@drawable/rounded_button_light_grey"
        android:fontFamily="@font/spirax"
        android:text="@string/eatogether"
        android:textAllCaps="false"
        android:textColor="#E9AD95"
        android:textSize="40dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>
